added relationship detail view and logic

--- a/RealmModelGenerator/AttributeDetailView.xib
+++ b/RealmModelGenerator/AttributeDetailView.xib
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="AttributeDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
@@ -24,10 +26,9 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="3xQ-hn-hqv">
-                    <rect key="frame" x="6" y="514" width="75" height="17"/>
+                    <rect key="frame" x="6" y="514" width="240" height="17"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="71" id="6nx-Nv-Per"/>
-                        <constraint firstAttribute="height" constant="17" id="Od3-60-kMN"/>
+                        <constraint firstAttribute="height" constant="17" id="OsD-6d-v57"/>
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attribute" id="DvD-ba-5VI">
                         <font key="font" size="13" name="Menlo-Regular"/>
@@ -35,7 +36,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2td-2N-DxQ">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2td-2N-DxQ">
                     <rect key="frame" x="9" y="401" width="97" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Attribute Type" id="SjL-5v-igd">
                         <font key="font" size="11" name="Menlo-Regular"/>
@@ -43,7 +44,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField identifier="nameTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nt8-h9-QDa">
+                <textField identifier="nameTextField" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nt8-h9-QDa">
                     <rect key="frame" x="80" y="477" width="164" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="attribute" drawsBackground="YES" id="1H9-1b-oPp">
                         <font key="font" metaFont="smallSystem"/>
@@ -54,7 +55,7 @@
                         <outlet property="delegate" destination="-2" id="QdD-em-lR5"/>
                     </connections>
                 </textField>
-                <textField identifier="defaultTextField" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
+                <textField identifier="defaultTextField" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bw6-Pl-lQu">
                     <rect key="frame" x="80" y="345" width="86" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="1Zx-yn-zca">
                         <font key="font" size="11" name="Menlo-Regular"/>
@@ -65,7 +66,7 @@
                         <outlet property="delegate" destination="-2" id="y62-Pj-1ri"/>
                     </connections>
                 </textField>
-                <popUpButton verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OgQ-sP-c3K">
+                <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="OgQ-sP-c3K">
                     <rect key="frame" x="78" y="369" width="169" height="26"/>
                     <popUpButtonCell key="cell" type="push" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" id="Xqi-YE-djg">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -82,7 +83,7 @@
                         <action selector="attributeTypeChanged:" target="-2" id="L6u-9i-5cX"/>
                     </connections>
                 </popUpButton>
-                <button identifier="ignoredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
+                <button identifier="ignoredCheckBox" translatesAutoresizingMaskIntoConstraints="NO" id="goE-ZA-b9j">
                     <rect key="frame" x="78" y="452" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Ignored" bezelStyle="regularSquare" imagePosition="left" inset="2" id="aY5-zn-g1Q">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -92,7 +93,7 @@
                         <action selector="checkBoxStateChanged:" target="-2" id="hLI-Zv-G85"/>
                     </connections>
                 </button>
-                <button identifier="primaryCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
+                <button identifier="primaryCheckBox" translatesAutoresizingMaskIntoConstraints="NO" id="l4p-Id-g72">
                     <rect key="frame" x="78" y="433" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Primary" bezelStyle="regularSquare" imagePosition="left" inset="2" id="F2B-UM-daP">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -102,7 +103,7 @@
                         <action selector="checkBoxStateChanged:" target="-2" id="D6V-ec-vwU"/>
                     </connections>
                 </button>
-                <button identifier="requiredCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iUY-5c-XAZ">
+                <button identifier="requiredCheckBox" translatesAutoresizingMaskIntoConstraints="NO" id="iUY-5c-XAZ">
                     <rect key="frame" x="166" y="433" width="75" height="18"/>
                     <buttonCell key="cell" type="check" title="Required" bezelStyle="regularSquare" imagePosition="left" inset="2" id="v3z-FY-GeD">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -112,7 +113,7 @@
                         <action selector="checkBoxStateChanged:" target="-2" id="dDS-yK-eqY"/>
                     </connections>
                 </button>
-                <button identifier="indexedCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
+                <button identifier="indexedCheckBox" translatesAutoresizingMaskIntoConstraints="NO" id="814-XZ-iyg">
                     <rect key="frame" x="166" y="452" width="69" height="18"/>
                     <buttonCell key="cell" type="check" title="Indexed" bezelStyle="regularSquare" imagePosition="left" inset="2" id="EdX-Tg-uWO">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -122,7 +123,7 @@
                         <action selector="checkBoxStateChanged:" target="-2" id="86H-0f-ng5"/>
                     </connections>
                 </button>
-                <button identifier="defaultCheckBox" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
+                <button identifier="defaultCheckBox" translatesAutoresizingMaskIntoConstraints="NO" id="isW-xR-GZI">
                     <rect key="frame" x="166" y="347" width="74" height="18"/>
                     <buttonCell key="cell" type="check" title="Default" bezelStyle="regularSquare" imagePosition="left" inset="2" id="sOY-03-iF9">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
@@ -132,13 +133,13 @@
                         <action selector="checkBoxStateChanged:" target="-2" id="VS3-Bk-bT1"/>
                     </connections>
                 </button>
-                <box verticalHuggingPriority="750" fixedFrame="YES" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-4X-7HO">
+                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" translatesAutoresizingMaskIntoConstraints="NO" id="b5o-4X-7HO">
                     <rect key="frame" x="8" y="424" width="187" height="5"/>
                     <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
                     <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <font key="titleFont" metaFont="system"/>
                 </box>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lfg-Ma-VJe">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lfg-Ma-VJe">
                     <rect key="frame" x="38" y="480" width="36" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Name" id="Ohs-Eo-pV9">
                         <font key="font" size="11" name="Menlo-Regular"/>
@@ -146,7 +147,7 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9lP-TW-riS">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="9lP-TW-riS">
                     <rect key="frame" x="3" y="454" width="71" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Properties" id="HY9-hp-zH5">
                         <font key="font" size="11" name="Menlo-Regular"/>
@@ -156,8 +157,44 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="Rab-ZS-ebK"/>
-                <constraint firstItem="3xQ-hn-hqv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="9" id="h3Y-72-lbX"/>
+                <constraint firstItem="goE-ZA-b9j" firstAttribute="bottom" secondItem="9lP-TW-riS" secondAttribute="bottom" id="2md-7S-Myh"/>
+                <constraint firstAttribute="trailing" secondItem="814-XZ-iyg" secondAttribute="trailing" constant="17" id="2qU-3D-29L"/>
+                <constraint firstItem="nt8-h9-QDa" firstAttribute="centerY" secondItem="lfg-Ma-VJe" secondAttribute="centerY" id="4Qx-ly-NrN"/>
+                <constraint firstItem="9lP-TW-riS" firstAttribute="top" secondItem="lfg-Ma-VJe" secondAttribute="bottom" constant="9" id="4be-TW-oAZ"/>
+                <constraint firstItem="lfg-Ma-VJe" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="40" id="4ox-X4-peR"/>
+                <constraint firstItem="isW-xR-GZI" firstAttribute="baseline" secondItem="bw6-Pl-lQu" secondAttribute="baseline" id="5xw-R2-0hy"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="8" id="6Ys-d6-ked"/>
+                <constraint firstItem="OgQ-sP-c3K" firstAttribute="top" secondItem="2td-2N-DxQ" secondAttribute="bottom" constant="8" symbolic="YES" id="CMa-4G-gqr"/>
+                <constraint firstItem="l4p-Id-g72" firstAttribute="leading" secondItem="goE-ZA-b9j" secondAttribute="leading" id="DPW-Ac-hwY"/>
+                <constraint firstItem="814-XZ-iyg" firstAttribute="baseline" secondItem="goE-ZA-b9j" secondAttribute="baseline" id="GZR-7U-Xu1"/>
+                <constraint firstItem="l4p-Id-g72" firstAttribute="leading" secondItem="OgQ-sP-c3K" secondAttribute="leading" id="Gui-HI-h6u"/>
+                <constraint firstItem="9lP-TW-riS" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="5" id="IK2-gd-a0X"/>
+                <constraint firstItem="goE-ZA-b9j" firstAttribute="leading" secondItem="9lP-TW-riS" secondAttribute="trailing" constant="8" symbolic="YES" id="K0C-bt-y6J"/>
+                <constraint firstItem="nt8-h9-QDa" firstAttribute="leading" secondItem="lfg-Ma-VJe" secondAttribute="trailing" constant="8" symbolic="YES" id="L3z-7Y-Wvg"/>
+                <constraint firstItem="nt8-h9-QDa" firstAttribute="baseline" secondItem="lfg-Ma-VJe" secondAttribute="firstBaseline" id="MbG-vu-HP4"/>
+                <constraint firstItem="bw6-Pl-lQu" firstAttribute="leading" secondItem="OgQ-sP-c3K" secondAttribute="leading" id="PAf-bq-uCw"/>
+                <constraint firstItem="l4p-Id-g72" firstAttribute="top" secondItem="goE-ZA-b9j" secondAttribute="bottom" constant="5" id="RRH-2T-9Uo"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="9" id="SxC-5A-JaY"/>
+                <constraint firstItem="nt8-h9-QDa" firstAttribute="top" secondItem="3xQ-hn-hqv" secondAttribute="bottom" constant="15" id="TJy-zh-Nc4"/>
+                <constraint firstItem="b5o-4X-7HO" firstAttribute="top" secondItem="l4p-Id-g72" secondAttribute="bottom" constant="8" symbolic="YES" id="Umg-uq-Fcs"/>
+                <constraint firstItem="814-XZ-iyg" firstAttribute="leading" secondItem="goE-ZA-b9j" secondAttribute="trailing" constant="17" id="WPM-eh-idL"/>
+                <constraint firstItem="iUY-5c-XAZ" firstAttribute="leading" secondItem="isW-xR-GZI" secondAttribute="leading" id="X7u-Xw-R8z"/>
+                <constraint firstItem="iUY-5c-XAZ" firstAttribute="baseline" secondItem="l4p-Id-g72" secondAttribute="baseline" id="a51-rO-pNw"/>
+                <constraint firstAttribute="trailing" secondItem="3xQ-hn-hqv" secondAttribute="trailing" constant="6" id="cHS-Pl-aCf"/>
+                <constraint firstAttribute="trailing" secondItem="iUY-5c-XAZ" secondAttribute="trailing" constant="11" id="dc1-Lz-puA"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="trailing" secondItem="OgQ-sP-c3K" secondAttribute="trailing" id="f1d-aK-4Us"/>
+                <constraint firstItem="2td-2N-DxQ" firstAttribute="top" secondItem="b5o-4X-7HO" secondAttribute="bottom" constant="8" symbolic="YES" id="hWr-52-2e1"/>
+                <constraint firstItem="lfg-Ma-VJe" firstAttribute="baseline" secondItem="nt8-h9-QDa" secondAttribute="baseline" id="jTD-tD-0vk"/>
+                <constraint firstItem="bw6-Pl-lQu" firstAttribute="top" secondItem="OgQ-sP-c3K" secondAttribute="bottom" constant="5" id="nct-UQ-2uM"/>
+                <constraint firstItem="goE-ZA-b9j" firstAttribute="trailing" secondItem="l4p-Id-g72" secondAttribute="trailing" id="oKW-J5-GaC"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="leading" secondItem="b5o-4X-7HO" secondAttribute="leading" id="q2X-gg-KTR"/>
+                <constraint firstItem="3xQ-hn-hqv" firstAttribute="trailing" secondItem="nt8-h9-QDa" secondAttribute="trailing" id="qC6-UF-MsH"/>
+                <constraint firstItem="nt8-h9-QDa" firstAttribute="leading" secondItem="goE-ZA-b9j" secondAttribute="leading" id="rD7-l3-Jqe"/>
+                <constraint firstItem="isW-xR-GZI" firstAttribute="leading" secondItem="bw6-Pl-lQu" secondAttribute="trailing" constant="2" id="xSx-0w-RP0"/>
+                <constraint firstItem="2td-2N-DxQ" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="11" id="xah-5H-fCE"/>
+                <constraint firstItem="814-XZ-iyg" firstAttribute="leading" secondItem="iUY-5c-XAZ" secondAttribute="leading" id="yLR-YV-vbN"/>
+                <constraint firstAttribute="trailing" secondItem="b5o-4X-7HO" secondAttribute="trailing" constant="55" id="yXP-5r-hFK"/>
+                <constraint firstItem="iUY-5c-XAZ" firstAttribute="centerX" secondItem="isW-xR-GZI" secondAttribute="centerX" id="ysE-F7-X4E"/>
             </constraints>
             <point key="canvasLocation" x="9" y="234"/>
         </customView>
