--- a/RealmModelGenerator/EntityDetailView.xib
+++ b/RealmModelGenerator/EntityDetailView.xib
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="EntityDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
@@ -17,16 +19,19 @@
             <rect key="frame" x="0.0" y="0.0" width="250" height="540"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cyv-Te-uvy">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Cyv-Te-uvy">
                     <rect key="frame" x="4" y="446" width="77" height="17"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="17" id="pcW-IO-3MA"/>
+                    </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Super Class" id="QwY-KD-JoC">
                         <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nLk-wr-U4G">
-                    <rect key="frame" x="87" y="476" width="150" height="22"/>
+                <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="nLk-wr-U4G">
+                    <rect key="frame" x="87" y="476" width="156" height="22"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="Aj2-d1-KEu">
                         <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
@@ -36,16 +41,19 @@
                         <outlet property="delegate" destination="-2" id="Pj3-ic-Owd"/>
                     </connections>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="r9q-db-ZSO">
-                    <rect key="frame" x="4" y="514" width="48" height="18"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Entity" id="c6p-lp-hbb">
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r9q-db-ZSO">
+                    <rect key="frame" x="4" y="514" width="241" height="18"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="18" id="nQX-EY-FsB"/>
+                    </constraints>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="Entity" id="c6p-lp-hbb">
                         <font key="font" size="13" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <popUpButton fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2oV-31-do6">
-                    <rect key="frame" x="85" y="441" width="153" height="25"/>
+                <popUpButton translatesAutoresizingMaskIntoConstraints="NO" id="2oV-31-do6">
+                    <rect key="frame" x="85" y="441" width="160" height="25"/>
                     <popUpButtonCell key="cell" type="bevel" title="Item 1" bezelStyle="regularSquare" imagePosition="left" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" allowsMixedState="YES" inset="2" selectedItem="j3u-eE-oz0" id="zxG-kS-tEr">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" size="11" name=".AppleSystemUIFont"/>
@@ -61,8 +69,11 @@
                         <action selector="superClassChanged:" target="-2" id="f4q-aq-4uQ"/>
                     </connections>
                 </popUpButton>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6fF-an-cLa">
-                    <rect key="frame" x="41" y="480" width="40" height="16"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6fF-an-cLa">
+                    <rect key="frame" x="4" y="480" width="76" height="16"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="16" id="Lrt-at-4i1"/>
+                    </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="Name" id="5M4-o6-smb">
                         <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -70,6 +81,23 @@
                     </textFieldCell>
                 </textField>
             </subviews>
+            <constraints>
+                <constraint firstItem="2oV-31-do6" firstAttribute="trailing" secondItem="nLk-wr-U4G" secondAttribute="trailing" id="0zS-i2-Nju"/>
+                <constraint firstItem="2oV-31-do6" firstAttribute="top" secondItem="nLk-wr-U4G" secondAttribute="bottom" constant="12" id="DTD-T1-vzr"/>
+                <constraint firstItem="6fF-an-cLa" firstAttribute="leading" secondItem="r9q-db-ZSO" secondAttribute="leading" id="JtV-a4-8UV"/>
+                <constraint firstItem="Cyv-Te-uvy" firstAttribute="leading" secondItem="6fF-an-cLa" secondAttribute="leading" id="Mma-Y6-H8u"/>
+                <constraint firstItem="2oV-31-do6" firstAttribute="leading" secondItem="Cyv-Te-uvy" secondAttribute="trailing" constant="8" symbolic="YES" id="OIR-Hz-GdN"/>
+                <constraint firstItem="Cyv-Te-uvy" firstAttribute="top" secondItem="6fF-an-cLa" secondAttribute="bottom" constant="17" id="Rho-nW-ZEr"/>
+                <constraint firstItem="2oV-31-do6" firstAttribute="leading" secondItem="nLk-wr-U4G" secondAttribute="leading" id="Rpn-w1-y4b"/>
+                <constraint firstItem="r9q-db-ZSO" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="8" id="dYj-P4-zMq"/>
+                <constraint firstItem="nLk-wr-U4G" firstAttribute="baseline" secondItem="6fF-an-cLa" secondAttribute="firstBaseline" id="fFK-g0-TXE"/>
+                <constraint firstItem="Cyv-Te-uvy" firstAttribute="centerX" secondItem="6fF-an-cLa" secondAttribute="centerX" id="fvQ-Y0-5S7"/>
+                <constraint firstItem="nLk-wr-U4G" firstAttribute="top" secondItem="r9q-db-ZSO" secondAttribute="bottom" constant="16" id="gFv-G8-2yA"/>
+                <constraint firstItem="2oV-31-do6" firstAttribute="centerY" secondItem="Cyv-Te-uvy" secondAttribute="centerY" id="rX0-2W-uxm"/>
+                <constraint firstItem="r9q-db-ZSO" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="6" id="vje-Wp-F50"/>
+                <constraint firstItem="r9q-db-ZSO" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="xMx-tz-m97"/>
+                <constraint firstItem="r9q-db-ZSO" firstAttribute="trailing" secondItem="nLk-wr-U4G" secondAttribute="trailing" id="zjH-C9-QIG"/>
+            </constraints>
             <point key="canvasLocation" x="-85" y="75"/>
         </customView>
     </objects>
