--- a/RealmModelGenerator/RelationshipDetailView.xib
+++ b/RealmModelGenerator/RelationshipDetailView.xib
@@ -5,7 +5,13 @@
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="9532"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="RelationshipDetailView" customModule="RealmModelGenerator" customModuleProvider="target"/>
+        <customObject id="-2" userLabel="File's Owner" customClass="RelationshipDetailView" customModule="RealmModelGenerator" customModuleProvider="target">
+            <connections>
+                <outlet property="destinationPopupButton" destination="6Rr-6w-X6j" id="Dy7-lV-CU4"/>
+                <outlet property="nameTextField" destination="jhL-p2-8xy" id="uic-dN-PfW"/>
+                <outlet property="toManyCheckBox" destination="ES1-x5-jg3" id="dza-un-oQO"/>
+            </connections>
+        </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
@@ -39,6 +45,9 @@
                         <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <connections>
+                        <outlet property="delegate" destination="-2" id="CLX-bk-Bwr"/>
+                    </connections>
                 </textField>
                 <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6Rr-6w-X6j">
                     <rect key="frame" x="93" y="442" width="152" height="26"/>
@@ -53,16 +62,22 @@
                             </items>
                         </menu>
                     </popUpButtonCell>
+                    <connections>
+                        <action selector="destinationChanged:" target="-2" id="oWr-18-qmd"/>
+                    </connections>
                 </popUpButton>
-                <button misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ES1-x5-jg3">
-                    <rect key="frame" x="93" y="422" width="77" height="18"/>
+                <button translatesAutoresizingMaskIntoConstraints="NO" id="ES1-x5-jg3">
+                    <rect key="frame" x="93" y="422" width="69" height="18"/>
                     <buttonCell key="cell" type="check" title="To many" bezelStyle="regularSquare" imagePosition="left" state="on" inset="2" id="Yhd-kc-Dbj">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
                         <font key="font" size="11" name="Menlo-Regular"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="toManyCheckBoxStateChanged:" target="-2" id="qCF-8G-BSt"/>
+                    </connections>
                 </button>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="co6-7X-brg">
-                    <rect key="frame" x="50" y="477" width="38" height="17"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="co6-7X-brg">
+                    <rect key="frame" x="57" y="477" width="31" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="name" id="9WO-QM-bTZ">
                         <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
