--- a/RealmModelGenerator/RelationshipsView.xib
+++ b/RealmModelGenerator/RelationshipsView.xib
@@ -18,42 +18,41 @@
             <rect key="frame" x="0.0" y="0.0" width="400" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView translatesAutoresizingMaskIntoConstraints="NO" id="7dH-0a-zlb" userLabel="Controls">
-                    <rect key="frame" x="0.0" y="0.0" width="400" height="30"/>
-                    <subviews>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qu4-CR-yDS">
-                            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="only" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="border" inset="2" id="rxz-Op-pQ5">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="addRelationshipOnClick:" target="-2" id="fNx-xN-NG2"/>
-                            </connections>
-                        </button>
-                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MA3-R5-A4Z">
-                            <rect key="frame" x="29" y="0.0" width="30" height="30"/>
-                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" inset="2" id="ci2-oO-Loe">
-                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                <font key="font" metaFont="system"/>
-                            </buttonCell>
-                            <connections>
-                                <action selector="removeRelationshipOnClick:" target="-2" id="qAq-ee-S0j"/>
-                            </connections>
-                        </button>
-                    </subviews>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qu4-CR-yDS">
+                    <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="30" id="rDj-Pu-z55"/>
+                        <constraint firstAttribute="height" constant="30" id="1I0-zi-WOL"/>
+                        <constraint firstAttribute="width" constant="30" id="Eyf-e3-6G5"/>
                     </constraints>
-                    <userDefinedRuntimeAttributes>
-                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                            <integer key="value" value="1"/>
-                        </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
-                            <color key="value" red="0.62352941179999999" green="0.62352941179999999" blue="0.62352941179999999" alpha="1" colorSpace="calibratedRGB"/>
-                        </userDefinedRuntimeAttribute>
-                    </userDefinedRuntimeAttributes>
-                </customView>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="only" alignment="left" lineBreakMode="truncatingTail" state="on" inset="2" id="rxz-Op-pQ5">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="addRelationshipOnClick:" target="-2" id="fNx-xN-NG2"/>
+                    </connections>
+                </button>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MA3-R5-A4Z">
+                    <rect key="frame" x="30" y="0.0" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="LQN-Rg-M0s"/>
+                    </constraints>
+                    <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" inset="2" id="ci2-oO-Loe">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="removeRelationshipOnClick:" target="-2" id="qAq-ee-S0j"/>
+                    </connections>
+                </button>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="g3j-VN-eE3">
+                    <rect key="frame" x="-2" y="173" width="404" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Relationshps" id="Dyh-kC-wy6">
+                        <font key="font" metaFont="system"/>
+                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                    </textFieldCell>
+                </textField>
                 <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="30" horizontalPageScroll="10" verticalLineScroll="30" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9S-t2-oc8">
                     <rect key="frame" x="0.0" y="29" width="400" height="136"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="03N-TJ-Hed">
@@ -140,26 +139,20 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </tableHeaderView>
                 </scrollView>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="g3j-VN-eE3">
-                    <rect key="frame" x="-2" y="173" width="404" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Relationshps" id="Dyh-kC-wy6">
-                        <font key="font" metaFont="system"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                    </textFieldCell>
-                </textField>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="7dH-0a-zlb" secondAttribute="trailing" id="73L-uQ-exq"/>
+                <constraint firstItem="Qu4-CR-yDS" firstAttribute="top" secondItem="MA3-R5-A4Z" secondAttribute="top" id="6kT-kZ-uc8"/>
                 <constraint firstItem="g3j-VN-eE3" firstAttribute="centerX" secondItem="N9S-t2-oc8" secondAttribute="centerX" id="7iQ-EX-nlR"/>
+                <constraint firstAttribute="bottom" secondItem="N9S-t2-oc8" secondAttribute="bottom" constant="29" id="8sN-pC-YAE"/>
+                <constraint firstItem="N9S-t2-oc8" firstAttribute="leading" secondItem="Qu4-CR-yDS" secondAttribute="leading" id="DqZ-Fg-iLa"/>
                 <constraint firstItem="N9S-t2-oc8" firstAttribute="leading" secondItem="M49-0X-eva" secondAttribute="leading" id="Fy8-Ij-KDS"/>
-                <constraint firstItem="7dH-0a-zlb" firstAttribute="leading" secondItem="M49-0X-eva" secondAttribute="leading" id="Jxb-GX-D0p"/>
                 <constraint firstItem="N9S-t2-oc8" firstAttribute="top" secondItem="M49-0X-eva" secondAttribute="top" constant="35" id="KWl-dE-vwV"/>
                 <constraint firstItem="N9S-t2-oc8" firstAttribute="top" secondItem="g3j-VN-eE3" secondAttribute="bottom" constant="8" symbolic="YES" id="NL7-sr-z9u"/>
-                <constraint firstItem="7dH-0a-zlb" firstAttribute="top" secondItem="N9S-t2-oc8" secondAttribute="bottom" constant="-1" id="SN3-cg-Bfh"/>
+                <constraint firstItem="MA3-R5-A4Z" firstAttribute="bottom" secondItem="Qu4-CR-yDS" secondAttribute="bottom" id="RZO-zt-FEO"/>
                 <constraint firstAttribute="trailing" secondItem="N9S-t2-oc8" secondAttribute="trailing" id="Sfw-Sm-fDq"/>
+                <constraint firstAttribute="bottom" secondItem="MA3-R5-A4Z" secondAttribute="bottom" id="bKd-2j-gmd"/>
+                <constraint firstItem="MA3-R5-A4Z" firstAttribute="leading" secondItem="M49-0X-eva" secondAttribute="leading" constant="30" id="cDt-T3-dNV"/>
                 <constraint firstItem="g3j-VN-eE3" firstAttribute="leading" secondItem="M49-0X-eva" secondAttribute="leading" id="mow-WM-qKC"/>
-                <constraint firstAttribute="bottom" secondItem="7dH-0a-zlb" secondAttribute="bottom" id="sSN-jT-KoG"/>
             </constraints>
             <point key="canvasLocation" x="67" y="186"/>
         </customView>
